dataset1235/2025-2/1153765216/users/641768463/executions/2814675586_2403290319.log
== RUN (2025-08-26 19:09:36)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = (preco * quantidade) 
print (round(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:27:40)
-- CODE: 
preco = float(input())
quantidade = int(input())
Custototal = preco + quantidade  
print (Custototal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:31:33)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = (preco + quantidade) 
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:29:18)
-- CODE: 
preco = int(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:29:26)
-- CODE: 
preco = int(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:28:03)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (Custototal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:30:09)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:33:33)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = (preco + quantidade) 
print (round(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2434
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
124
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
92
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:30:08)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:25:27)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo total = preco + quantidade  
print(custo, total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:31:06)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = float(preco + quantidade) 
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:09:56)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = (preco * quantidade) 
print (round(Custototal))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:25:01)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo total = preco + quantidade  
print(custo total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:10:18)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = (preco * quantidade) 
print (Custototal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:25:00)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo total = preco + quantidade  
print(custo total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:28:42)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:31:48)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = (preco + quantidade) 
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:25:02)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo total = preco + quantidade  
print(custo total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:30:22)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (float(Custototal))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:31:15)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = float(preco + quantidade) 
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:30:07)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:10:26)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = (preco * quantidade) 
print (Custototal)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:28:06)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (Custototal)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:30:32)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:24:41)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo total = preco + quantidade  
print(custo total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 4
    custo total = preco + quantidade  
          ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:30:31)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = preco + quantidade  
print (float(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:33:22)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = (preco + quantidade) 
print (round(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2434
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
124
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
92
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:32:26)
-- CODE: 
preco = float(input())
quantidade = float(input())
Custototal = (preco + quantidade) 
print (round(Custototal))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2434
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
124
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
92
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
